--- a/info.plist
+++ b/info.plist
@@ -8,29 +8,6 @@
 	<string>Tools</string>
 	<key>connections</key>
 	<dict>
-		<key>00092187-007C-47C1-99C6-6C2568AD3E99</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>085EAF52-7D33-4DF6-92C5-6706DF0543BE</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-			<dict>
-				<key>destinationuid</key>
-				<string>E60D2519-7CAB-4FF3-B7C5-FBAC4005F275</string>
-				<key>modifiers</key>
-				<integer>131072</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
 		<key>95132ABC-8907-4D39-B228-4D9EF25A6AF8</key>
 		<array>
 			<dict>
@@ -500,6 +477,6 @@ open -a "`ls -dt /Applications/Sublime\ Text.app*|head -1`" "$query"</string>
 	<key>version</key>
 	<string>v0.0.1</string>
 	<key>webaddress</key>
-	<string>joeeey9303@gmail.com</string>
+	<string>https://github.com/joeeeeey/ide_launcher</string>
 </dict>
 </plist>
